trying to code the comments to show up with the username, date and message. running into a syntax error

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+* {
+  background-color: gray;
+}
+
 textarea {
   width: 400px;
   height: 100px;
@@ -14,4 +18,21 @@ button {
   font-family: arial;
   font-weight: 400;
   cursor: pointer;
+  margin-bottom: 60px;
+}
+
+.comment-box {
+  width: 815px;
+  padding: 20px;
+  margin-bottom: 4px;
+  background-color: white;
+  border-radius: 4px;
+}
+
+.comment-box p {
+  font-family: arial;
+  font-size: 14px;
+  line-height: 16px;
+  color: #282828;
+  font-weight: 100;
 }
