--- a/css/main.css
+++ b/css/main.css
@@ -55,3 +55,21 @@ button {
 .edit-form button:hover {
   opacity: 1;
 }
+
+.delete-form {
+  position: relative;
+  top: 0px;
+  right: 60px;
+}
+
+.delete-form button {
+  width: 20px;
+  height: 10px;
+  color: #282828;
+  background-color: #fff;
+  opacity: 0.7;
+}
+
+.delete-form button:hover {
+  opacity: 1;
+}
